--- a/backdata-api/package.json
+++ b/backdata-api/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backdata-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +12,6 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "description": ""
 }
